--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
         </div>
 
         <div id="error" class="error-message">
-            ❌ Respuesta incorrecta… intenta otra vez 😉
+            ❌ Respuesta incorrecta, intenta de nuevo
         </div>
     </div>
 
     <script>
         function respuestaSi() {
             const numero = "5219331172380";
-            const mensaje = "Acepto ser tu san valenín mi amor";
+            const mensaje = "Claro que acepto ser tu san valenín mi amor";
             const url = "https://wa.me/" + numero + "?text=" + encodeURIComponent(mensaje);
             window.location.href = url;
         }
