--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>¿Quieres ser mi San Valentín?</title>
+    <title>¿Quieres ser mi San Valentín mi amor?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
@@ -94,7 +94,7 @@
 <body>
 
     <div class="overlay">
-        <h1>¿Quieres ser mi San Valentín? ❤️</h1>
+        <h1>¿Quieres ser mi San Valentín mi amor?</h1>
 
         <div class="buttons">
             <button class="yes" onclick="respuestaSi()">Sí</button>
@@ -102,7 +102,7 @@
         </div>
 
         <div id="error" class="error-message">
-            ❌ Respuesta incorrecta, intenta de nuevo
+            ❌ Errooooor, intenta de nuevo
         </div>
     </div>
 
@@ -123,3 +123,4 @@
 
 </body>
 </html>
+
