--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <script>
         function respuestaSi() {
             const numero = "5219331172380";
-            const mensaje = "Claro que acepto ser tu san valenín mi amor";
+            const mensaje = "Claro que acepto ser tu san valentín mi amor";
             const url = "https://wa.me/" + numero + "?text=" + encodeURIComponent(mensaje);
             window.location.href = url;
         }
@@ -123,4 +123,5 @@
 
 </body>
 </html>
+
 
