--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: url('IMG_2705') no-repeat center center/cover; /* AQUÍ PUEDES CAMBIAR LA IMAGEN */
+            background: url('IMG_2705.jpg') no-repeat center center/cover; /* AQUÍ PUEDES CAMBIAR LA IMAGEN */
         }
 
         .overlay {
@@ -123,6 +123,7 @@
 
 </body>
 </html>
+
 
 
 
